--- a/package.json
+++ b/package.json
@@ -1,22 +1,35 @@
 {
-  "name": "custom-router",
-  "private": true,
-  "version": "0.0.0",
+  "name": "pablo-router",
+  "version": "0.0.2",
   "type": "module",
+  "main": "lib/index.js",
+  "module": "lib/index.js",
+  "exports": {
+    ".": {
+      "import": "./lib/index.js",
+      "require": "./lib/index.js"
+    },
+    "./package.json": "./package.json"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "prepare": "swc ./src/Route.jsx ./src/Router.jsx ./src/index.jsx ./src/Link.jsx -d lib && cp ./src/utils.js ./src/consts.js lib/src",
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui"
   },
   "dependencies": {
-    "path-to-regexp": "6.2.1",
+    "path-to-regexp": "6.2.1"
+  },
+  "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@swc/cli": "^0.3.12",
+    "@swc/core": "^1.4.12",
     "@testing-library/react": "^14.2.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
