--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "happy-dom": "^14.5.1",
     "vite": "^5.2.0",
+    "vite-plugin-vercel": "^5.0.5",
     "vitest": "^1.4.0"
   }
 }
